<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".recommend.fragment.RecommendFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/rank_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rank_list"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/top_list_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/top_list_1_image"
                    style="@style/rank_image"
                    android:layout_width="match_parent"
                    android:src="@drawable/hot_songs" />

                <TextView
                    style="@style/recommendText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/top_list_1_image"
                    android:text="@string/top_list_1" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/top_list_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/top_list_2_image"
                    style="@style/rank_image"
                    android:layout_width="match_parent"
                    android:src="@drawable/new_songs" />

                <TextView
                    style="@style/recommendText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/top_list_2_image"
                    android:text="@string/top_list_2" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/top_list_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/top_list_3_image"
                    style="@style/rank_image"
                    android:layout_width="match_parent"
                    android:src="@drawable/up_songs" />

                <TextView
                    style="@style/recommendText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/top_list_3_image"
                    android:text="@string/top_list_3" />

            </RelativeLayout>

        </LinearLayout>

        <TextView
            style="@style/rank_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recommend_play_list"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommend_play_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />

        <TextView
            style="@style/rank_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recommend_songs"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recommend_songs"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>