<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".personal.PersonalActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <TextView
        style="@style/rank_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/init_place"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_bottom_border"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp">

            <TextView
                style="@style/personalMyCountTextStyle"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/place_name" />

            <LinearLayout
                android:id="@+id/nameContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <EditText
                    android:id="@+id/nick_name_tex"
                    style="@style/personalMyCountTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_bottom_border"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp">

            <TextView
                style="@style/personalMyCountTextStyle"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/place_desName" />

            <LinearLayout
                android:id="@+id/phoneContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <EditText
                    android:id="@+id/username_tex"
                    style="@style/personalMyCountTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_bottom_border"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp">

            <TextView
                style="@style/personalMyCountTextStyle"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/place_label" />

            <LinearLayout
                android:id="@+id/label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <EditText
                    android:id="@+id/label_tex"
                    style="@style/personalMyCountTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/visitor_image_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_bottom_border"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp">

            <TextView
                style="@style/personalMyCountTextStyle"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/place_image" />

            <LinearLayout
                android:id="@+id/imageContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="300dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/login_baground" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>