<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".personal.PersonalActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/visitorImageContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_bottom_border"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/personImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:src="@drawable/hugh"
                app:civ_border_color="@color/light"
                app:civ_border_width="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                    android:gravity="center_horizontal|top" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_bottom_border"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp">

            <TextView
                style="@style/personalMyCountTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/nick_name" />

            <LinearLayout
                android:id="@+id/nameContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <TextView
                    android:id="@+id/nick_name_tex"
                    style="@style/personalMyCountTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                    android:gravity="center_horizontal|top" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_bottom_border"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp">

            <TextView
                style="@style/personalMyCountTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/login_username" />

            <LinearLayout
                android:id="@+id/phoneContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <TextView
                    android:id="@+id/username_tex"
                    style="@style/personalMyCountTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                    android:gravity="center_horizontal|top" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp">

            <TextView
                style="@style/personalMyCountTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="修改密码" />

            <LinearLayout
                android:id="@+id/passwordContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableRight="@drawable/ic_chevron_right_black_24dp"
                    android:gravity="center_horizontal|top" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_label"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>